update context var

--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -7,4 +7,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: "My Step"
-              run: echo "Hello! ${{github.action}}" 
+              run: echo "Hello! ${{github.actor}}" 
